--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@
   --line-color: rgba(236, 236, 236, 1);
   --icon-symbol-color: rgba(175, 177, 184, 1);
   --time-transition-duration: 2500ms;
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* COMPONENTS */
 .container {
@@ -97,7 +98,7 @@ ul {
 .nav-list-item:focus {
   color: var(--theme-textcolor);
   transition-duration: var(--time-transition-duration);
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--timing-function);
 }
 .site-nav .nav-list-item.current {
   color: var(--theme-textcolor);
@@ -141,7 +142,7 @@ ul {
 .contact-list-item:focus {
   color: var(--theme-textcolor);
   transition-duration: var(--time-transition-duration);
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--timing-function);
 }
 .icon-envelope {
   width: 16px;
@@ -338,7 +339,7 @@ ul {
   background-color: var(--theme-textcolor);
   fill: var(--hover-textcolor);
   transition-duration: var(--time-transition-duration);
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--timing-function);
 }
 /* ============ styles for CLIENTS ============ */
 .clients .container {
@@ -375,7 +376,7 @@ ul {
   fill: var(--theme-textcolor);
   border-color: var(--theme-textcolor);
   transition-duration: var(--time-transition-duration);
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--timing-function);
 }
 .icon-clients {
 }
@@ -408,7 +409,7 @@ ul {
 .geoposition:focus {
   color: var(--theme-textcolor);
   transition-duration: var(--time-transition-duration);
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--timing-function);
 }
 .address-link {
   color: var(--footer-contacts-textcolor);
@@ -417,7 +418,7 @@ ul {
 .address-link:focus {
   color: var(--theme-textcolor);
   transition-duration: var(--time-transition-duration);
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--timing-function);
 }
 .address-list-item {
   margin-top: 9px;
@@ -466,7 +467,7 @@ ul {
 .social-list-link-footer:focus {
   background-color: var(--theme-textcolor);
   transition-duration: var(--time-transition-duration);
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--timing-function);
 }
 
 /* ============ styles for PAGE portfolio ============ */
@@ -503,7 +504,7 @@ ul {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   transition-duration: var(--time-transition-duration);
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--timing-function);
 }
 .btn-portfolio .modal-btn-portfolio.current {
   background-color: var(--theme-textcolor);
@@ -543,7 +544,7 @@ ul {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
   transition-duration: var(--time-transition-duration);
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--timing-function);
 }
 .thumb-image {
   display: block;
