--- a/css/styles.css
+++ b/css/styles.css
@@ -568,7 +568,6 @@ ul {
 }
 .thumb-link {
   display: block;
-  position: relative;
 }
 .thumb-link:hover,
 .thumb-link:focus {
@@ -586,10 +585,17 @@ ul {
   border: var(--line-color) solid 1px;
   border-top: 0;
 }
+.thumb-box {
+  position: relative;
+  overflow: hidden;
+}
 .overlay {
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
   padding: 63px 24px;
   background-color: rgba(33, 150, 243, 0.9);
   font-weight: 400;
@@ -597,4 +603,11 @@ ul {
   line-height: 1.56;
   letter-spacing: 0.03em;
   color: var(--hover-textcolor);
+
+  transform: translateY(100%);
+  transition: transform 500ms linear;
+}
+.thumb-link:hover .overlay,
+.thumb-link:focus .overlay {
+  transform: translateY(0%);
 }
