--- a/css/styles.css
+++ b/css/styles.css
@@ -72,16 +72,16 @@ ul {
   height: auto;
 }
 /* ============ styles for header ============ */
-.menu {
-  border-bottom: var(--line-color) solid 1px;
-}
+.contact-list-item,
+.contact-list,
+.site-nav,
+.nav-section,
 .menu .container {
   display: flex;
-  /* align-items: center; */
+  align-items: center;
 }
-.nav-section {
-  padding-top: 24px;
-  /* padding-bottom: 25px; */
+.menu {
+  border-bottom: var(--line-color) solid 1px;
 }
 .logo {
   font-family: "Raleway";
@@ -95,8 +95,6 @@ ul {
   color: var(--logo-black-textcolor);
 }
 .site-nav {
-  display: inline-flex;
-  /* align-items: center; */
   margin-left: 93px;
 }
 .nav-list-item:hover,
@@ -108,48 +106,45 @@ ul {
 .site-nav .nav-list-item.current {
   color: var(--theme-textcolor);
 }
+.nav-list-item {
+  position: relative;
+  font-weight: 500;
+  color: var(--title-textcolor);
+}
 .nav-list-item.current::after {
+  position: absolute;
   display: block;
   content: "";
-  width: 48px;
+  bottom: 0;
+  width: 100%;
   height: 4px;
+  border-radius: 2px;
   margin: 0 auto;
   margin-top: 28px;
   background-color: #2196f3;
 }
 .nav-list-item.current .site-nav {
-  display: flex;
   margin-left: 93px;
 }
 .site-nav .item:not(:last-child) {
   margin-right: 50px;
 }
 .contact-list {
-  display: flex;
   margin-left: auto;
-  /* align-items: center; */
 }
 .contact-list .item:not(:last-child) {
   margin-right: 50px;
 }
 .nav-list-item,
 .contact-list-item {
-  /* align-items: center; */
   padding: 32px 0px;
 }
 .contact-list-item {
-  display: flex;
-  /* align-items: center;
-  justify-content: center; */
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--paragraph-textcolor);
-}
-.nav-list-item {
-  font-weight: 500;
-  color: var(--title-textcolor);
 }
 .contact-list-item:hover,
 .contact-list-item:focus {
@@ -408,8 +403,6 @@ ul {
   transition-duration: var(--time-transition-duration);
   transition-timing-function: var(--timing-function);
 }
-.icon-clients {
-}
 /* ============ styles for footer ============ */
 .footer-section {
   padding: 60px 0px;
@@ -499,7 +492,6 @@ ul {
   transition-duration: var(--time-transition-duration);
   transition-timing-function: var(--timing-function);
 }
-
 /* ============ styles for PAGE portfolio ============ */
 .port {
   padding-top: 94px;
@@ -612,7 +604,6 @@ ul {
   transform: translateY(0%);
 }
 /* ============ styles for MODAL WINDOW ============ */
-
 .backdrop {
   position: fixed;
   top: 0;
@@ -620,6 +611,12 @@ ul {
   width: 100vw;
   height: 100vh;
   background-color: rgbA(0, 0, 0, 0.7);
+
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+
+  transition: opacity 500ms linear, visibility 500ms linear;
 }
 .modal {
   position: absolute;
@@ -631,6 +628,9 @@ ul {
   background-color: var(--hover-textcolor);
 }
 .close-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   top: 8px;
   right: 8px;
@@ -641,4 +641,9 @@ ul {
   background-color: transparent;
   cursor: pointer;
   padding: 0;
+}
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
